[package]
name = "hcal"
version = "0.1.17"
description = "Hexadecimal calendar for terminal"
license = "MIT"
authors = ["0xflotus"]
edition = "2018"

homepage = "https://github.com/0xflotus/hcal"
repository = "https://github.com/0xflotus/hcal"
keywords = ["cli", "calendars", "hexadecimal"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
chrono = "0.4"
bdays = "0.1.1"
regex = "1"

[[bin]]

name = "hcal"
