[package]
name = "hcal"
version = "0.4.1"
description = "Hexadecimal calendar for terminal"
license = "MIT"
authors = ["0xflotus"]
edition = "2018"

homepage = "https://github.com/0xflotus/hcal"
repository = "https://github.com/0xflotus/hcal"
keywords = ["cli", "calendars", "hexadecimal", "ternary"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdays = "0.1.3"
cbb = "0.2.1"
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["cargo"] }
regex = "1.10.2"

[[bin]]

name = "hcal"
